Верстка списка рецензий

--- a/base/src/main/res/values/string.xml
+++ b/base/src/main/res/values/string.xml
@@ -69,4 +69,13 @@
     <string name="change_personal_data_confirm_new_pass_hint">Подтвердите пароль</string>
     <string name="change_personal_data_btn_save">Сохранить</string>
     <!--  endregion  -->
+
+
+    <!--  region ItemReview-->
+    <string name="tools_review_text">Всем доброго времени суток!
+        Давно не было от меня отзывов о книгах, сегодня этот момент настал, хочу поделиться мыслями о книге которую я закончила читать вчера вечером.
+        Прочитала я её быстро, в два захода, но не потому что она была мне сильно интересна, а отчасти от того чтобы быстрее узнать что уже будет в конце этой книги и начать читать новую (так как список того что я хочу прочесть внушающий).
+    </string>
+    <!-- endregion-->
+
 </resources>
