--- a/base/src/main/res/layout/item_book.xml
+++ b/base/src/main/res/layout/item_book.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:paddingVertical="5dp"
     android:layout_marginHorizontal="10dp"
     android:orientation="vertical">
 
