--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -5,7 +5,7 @@
     app:startDestination="@id/feedFragmentView">
     <fragment
         android:id="@+id/feedFragmentView"
-        android:name="com.litreview.f_feed.FeedView"
+        android:name="com.litreview.f_feed.FeedFragmentView"
         android:label="FeedFragmentView" />
     <fragment
         android:id="@+id/searchFragmentView"
