--- a/base/src/main/res/layout/item_book.xml
+++ b/base/src/main/res/layout/item_book.xml
@@ -15,7 +15,7 @@
         app:cardCornerRadius="20dp">
 
         <ImageView
-            android:id="@+id/item_bool_poster"
+            android:id="@+id/item_book_poster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/stub_content_description"
