--- a/f_book_detail/src/main/res/layout/fragment_book_detail.xml
+++ b/f_book_detail/src/main/res/layout/fragment_book_detail.xml
@@ -40,6 +40,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/book_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
