--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/splashFragmentView">
 
     <fragment
         android:id="@+id/mainFragment"
@@ -80,4 +80,15 @@
         android:id="@+id/bookDetailFragmentView"
         android:name="com.litreview.f_book_detail.BookDetailFragmentView"
         android:label="BookDetailFragmentView" />
+    <fragment
+        android:id="@+id/splashFragmentView"
+        android:name="com.litreview.f_start.splash.SplashFragmentView"
+        android:label="SplashFragmentView" >
+        <action
+            android:id="@+id/action_splashFragmentView_to_mainFragment"
+            app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_splashFragmentView_to_mainFlowFragmentView"
+            app:destination="@id/mainFlowFragmentView" />
+    </fragment>
 </navigation>
