--- a/f_book_detail/src/main/res/layout/fragment_book_detail.xml
+++ b/f_book_detail/src/main/res/layout/fragment_book_detail.xml
@@ -9,6 +9,17 @@
         android:id="@+id/detail_toolbar"
         layout="@layout/layout_toolbar" />
 
+    <ImageButton
+        android:id="@+id/bookmark_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_margin="5dp"
+        android:background="?actionBarItemBackground"
+        android:elevation="10dp"
+        android:padding="5dp"
+        android:src="@drawable/ic_bookmark" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -56,12 +67,11 @@
                 tools:text="J.D. Salinger" />
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatRatingBar
                     android:id="@+id/rating_bar"
