--- a/f_book_detail/src/main/res/layout/fragment_book_detail.xml
+++ b/f_book_detail/src/main/res/layout/fragment_book_detail.xml
@@ -134,7 +134,7 @@
         android:paddingBottom="20dp">
 
         <Button
-            android:id="@+id/detail_read_review"
+            android:id="@+id/detail_read_review_btn"
             style="@style/Button.Main.Big"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -143,7 +143,7 @@
             android:text="Читать рецензию" />
 
         <Button
-            android:id="@+id/detail_write_review"
+            android:id="@+id/detail_write_review_btn"
             style="@style/Button.Main.Big"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
