--- a/f_write_review/src/main/res/layout/fragment_write_review.xml
+++ b/f_write_review/src/main/res/layout/fragment_write_review.xml
@@ -10,7 +10,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,7 +19,6 @@
             android:gravity="center"
             android:orientation="vertical"
             android:paddingHorizontal="20dp"
-            android:paddingTop="20dp"
             android:paddingBottom="20dp">
 
             <TextView
@@ -71,10 +71,12 @@
                 android:padding="10dp"
                 android:textAppearance="@style/Base.14.Regular" />
 
+
             <androidx.appcompat.widget.AppCompatRatingBar
-                style="?android:attr/ratingBarStyleIndicator"
+                style="?android:attr/ratingBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:stepSize="1"
                 android:layout_marginVertical="10dp"
                 android:numStars="5" />
 
