Базовай компоненты для экрана написания рецензии и рефакторинг показа снеков

--- a/base/src/main/res/values/pallete_colors.xml
+++ b/base/src/main/res/values/pallete_colors.xml
@@ -6,6 +6,7 @@
     <color name="red">#D45555</color>
     <color name="red_alpha_10">#1AD45555</color>
     <color name="red_error">#870A0A</color>
+    <color name="green">#30AC1A</color>
 
     <color name="milk">#F7F7F7</color>
 
