--- a/f_write_review/src/main/res/layout/fragment_write_review.xml
+++ b/f_write_review/src/main/res/layout/fragment_write_review.xml
@@ -60,6 +60,7 @@
             </LinearLayout>
 
             <EditText
+                android:id="@+id/review_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -73,15 +74,16 @@
 
 
             <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/review_rb"
                 style="?android:attr/ratingBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:stepSize="1"
                 android:layout_marginVertical="10dp"
-                android:numStars="5" />
+                android:numStars="5"
+                android:stepSize="1" />
 
             <Button
-                android:id="@+id/main_btn_sign_up"
+                android:id="@+id/send_review_btn"
                 style="@style/Button.Main.Big"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
