--- a/f_book_detail/src/main/res/layout/fragment_book_detail.xml
+++ b/f_book_detail/src/main/res/layout/fragment_book_detail.xml
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:text="Читать рецензию" />
+            android:text="Читать рецензии" />
 
         <Button
             android:id="@+id/detail_write_review_btn"
