--- a/f_reviews_list/src/main/res/layout/fragment_reviews_list.xml
+++ b/f_reviews_list/src/main/res/layout/fragment_reviews_list.xml
@@ -10,6 +10,7 @@
         layout="@layout/layout_toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reviews_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
