--- a/base/src/main/res/layout/item_book.xml
+++ b/base/src/main/res/layout/item_book.xml
@@ -44,6 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.14.Regular.Steel_Gray_400"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_book_name"
