--- a/base/src/main/res/values/string.xml
+++ b/base/src/main/res/values/string.xml
@@ -19,6 +19,7 @@
     <string name="main_description_text">Все обзоры в одном приложении, пишите\nили читайте рецензии других</string>
     <string name="main_sign_in_btn_text">Войти</string>
     <string name="main_sign_up_btn_text">Зарегистрироваться</string>
+    <string name="main_guest_btn_text">Продолжить как гость</string>
     <!--  endregion  -->
 
     <!-- region AuthFragmentView  -->
