--- a/f_chats/src/main/res/layout/fragment_chats.xml
+++ b/f_chats/src/main/res/layout/fragment_chats.xml
@@ -28,9 +28,13 @@
     </com.google.android.material.tabs.TabLayout>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chats_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:text="Совсем скоро здесь появятся чаты и вы сможете обсуждать свою любимые книги с единомышленниками!"
+        android:paddingHorizontal="20dp"
+        android:textAppearance="@style/Base.18.Regular"/>
 
 </LinearLayout>
