--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -62,7 +62,9 @@
             app:destination="@id/changePersonalDataView" />
         <action
             android:id="@+id/action_mainFlowFragmentView_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            app:destination="@id/mainFragment"
+            app:popUpTo="@id/mainFlowFragmentView"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_mainFlowFragmentView_to_bookDetailFragmentView"
             app:destination="@id/bookDetailFragmentView" />
