--- a/f_main/src/main/res/layout/flow_fragment_main.xml
+++ b/f_main/src/main/res/layout/flow_fragment_main.xml
@@ -11,8 +11,7 @@
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/main_nav_graph" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav_bar"
@@ -21,7 +20,6 @@
         android:layout_height="wrap_content"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_container_view"
-        app:menu="@menu/bottom_bar_menu" />
+        app:layout_constraintTop_toBottomOf="@+id/main_container_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
