--- a/f_profile/src/main/res/layout/fragment_profile.xml
+++ b/f_profile/src/main/res/layout/fragment_profile.xml
@@ -57,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numStars="5"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/profile_description"
         app:layout_constraintTop_toBottomOf="@+id/profile_description"
         tools:rating="4" />
@@ -67,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:textAppearance="@style/Base.12.Regular"
+        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@+id/profile_rating_bar"
         app:layout_constraintTop_toTopOf="@+id/profile_rating_bar"
         tools:text="4.0" />
@@ -193,5 +195,24 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/not_auth_placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorOnPrimary"
+        android:elevation="20dp"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:gravity="center"
+            android:text="@string/not_auth_palaceholder_text"
+            android:textAppearance="@style/Base.20.Medium">
+        </TextView>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
